--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,13 @@
    <distributionManagement>
         <repository>
           <id>nexus</id>
-          <name>KC Tech Releases Nexus Repository</name>
-          <url>http://52.91.88.226:8081/repository/kctech-release/</url>
+          <name>maven-releases Nexus Repository</name>
+          <url>http://13.233.183.172:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
           <id>nexus</id>
-          <name>KC Tech Snapshot Nexus Repository </name>
-           <url>http://52.91.88.226:8081/repository/kctech-snapshot/</url>
+          <name>maven-snapshots Nexus Repository </name>
+           <url>http://13.233.183.172:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
    </distributionManagement>
 	
